# Reproducibility-Study-of-Transformers-Can-Do-Bayesian-Inference

./: .gitignore  README.md
Quantum_ML/: .gitignore  main.ipynb  main_unitarity3d.ipynb  pyproject.toml  train_unitarity3d.py
Quantum_ML/model/: __init__.py  distribution.py  regressor.py  sampling.py  train.py  transformer.py
Quantum_ML/utility/: Kraus.py  Kraus_Representation.py  Random_Choi.py  Random_Kraus.py
