[project]
name = "PFN4Quantum"
version = "0.4.2"

description = "PFNs made ready for BO"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    'torch>=2.2',
    'scikit-learn>=0.24.2',
    'pyyaml>=5.4.1',
    'numpy>=1.21.2',
    'requests>=2.23.0',
    'gpytorch>=1.5.0',
    'botorch>=0.10.0',   # ✅ add this
    'configspace>=0.4.21',
    'tqdm>=4.62.1',
    'matplotlib>=3.10.1',
    'einops>=0.8.1',
    'pre-commit>=3.5.0',
    'black==24.4.2',
    'usort==1.0.8.post1',
    'ruff-api==0.1.0',
    'stdlibs==2024.1.28',
    'pytest>=5.4.3',
    'flake8-bugbear>=24.0.0',
    'tensorboard>=2.20.0',
    'seaborn',
    'qutip',
    'pandas',
    'qutip-qip',
    'jupyterlab'
]